# cs184-final-project

./: .gitignore  .gitmodules  CMakeLists.txt  FinalProject  README.md  _config.yml  bear.fbx  bear_1.fbx  cmake_install.cmake  index.html  main.cpp
final-report/: index.html
milestone/: .milestone-video.mov.icloud  .test-video.mp4.icloud  index.html
models/: MinionPig.fbx  bear_2.fbx  bear_colored.fbx  bear_frame0.fbx  bear_frame10.fbx  bear_frame20.fbx  bear_frame30.fbx  bear_new.fbx  bear_new_2.fbx  bear_official.fbx  bear_one_mesh.fbx  bear_without_bone.fbx
proposal/: index.html
shaders/: Default.frag  Default.vert  sinusoidal.frag  sinusoidal.vert  skin.vert  skinning.frag  skinning.vert
src/: animatedObject.cpp  animatedObject.h  animator.cpp  animator.h  keyframe.h  main.cpp  model.cpp  model.h  shader.cpp  shader.h  utils.cpp  utils.h  vertex.glsl
tests/: test_animator.cpp
